added scss in src

--- a/prepros.config
+++ b/prepros.config
@@ -922,43 +922,43 @@
       {
         "file": "src/scss/download.scss",
         "config": {
-          "customOutput": "css\\download.css"
+          "customOutput": "src\\css\\download.css"
         }
       },
       {
         "file": "src/scss/features.scss",
         "config": {
-          "customOutput": "css\\features.css"
+          "customOutput": "src\\css\\features.css"
         }
       },
       {
         "file": "src/scss/footer.scss",
         "config": {
-          "customOutput": "css\\footer.css"
+          "customOutput": "src\\css\\footer.css"
         }
       },
       {
         "file": "src/scss/header.scss",
         "config": {
-          "customOutput": "css\\header.css"
+          "customOutput": "src\\css\\header.css"
         }
       },
       {
         "file": "src/scss/slider.scss",
         "config": {
-          "customOutput": "css\\slider.css"
+          "customOutput": "src\\css\\slider.css"
         }
       },
       {
         "file": "src/scss/style.scss",
         "config": {
-          "customOutput": "css\\style.css"
+          "customOutput": "src\\css\\style.css"
         }
       },
       {
         "file": "src/scss/team.scss",
         "config": {
-          "customOutput": "css\\team.css"
+          "customOutput": "src\\css\\team.css"
         }
       },
       {
@@ -970,7 +970,7 @@
       {
         "file": "src/scss/work.scss",
         "config": {
-          "customOutput": "css\\work.css"
+          "customOutput": "src\\css\\work.css"
         }
       }
     ]
